--- a/hotel_system/hotel_stats/templates/dashboard.html
+++ b/hotel_system/hotel_stats/templates/dashboard.html
@@ -6,39 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Dashboard</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <script src="{% static 'js/dashboard.js' %}"></script>
 </head>
 <body>
-    <h1>Hotel Statistics</h1>
+    <h1>Hotel Statistics Dashboard</h1>
 
-    <h2>Most Booked Hotels</h2>
+    <h2>Hotel Distribution (Type of Hotels)</h2>
     <ul>
-        {% for hotel in statistics.most_booked_hotels %}
-            <li>{{ hotel.hotel.value }}: {{ hotel.count.value }} reservations</li>
+        {% for hotel in hotel_distribution %}
+            <li>{{ hotel.hotel }}: {{ hotel.count }} reservations</li>
         {% endfor %}
     </ul>
 
     <h2>Reservations per Month</h2>
     <ul>
-        {% for month in statistics.reservations_per_month %}
-            <li>Month: {{ month.month.value }} - Reservations: {{ month.count.value }}</li>
+        {% for month in reservations_per_month %}
+            <li>Month: {{ month.arrival_date_month }} - Reservations: {{ month.count }}</li>
         {% endfor %}
     </ul>
 
-    <h2>Average Number of Reservations</h2>
-    <p>{{ statistics.average_reservations.0.avg.value }}</p>
-
     <h2>Cancellations per Month</h2>
     <ul>
-        {% for month in statistics.cancellations_per_month %}
-            <li>Month: {{ month.month.value }} - Cancellations: {{ month.count.value }}</li>
+        {% for month in cancellations_per_month %}
+            <li>Month: {{ month.arrival_date_month }} - Cancellations: {{ month.count }}</li>
         {% endfor %}
     </ul>
 
     <h2>Top Countries by Reservations</h2>
     <ul>
-        {% for country in statistics.top_countries %}
-            <li>{{ country.country.value }}: {{ country.count.value }} reservations</li>
+        {% for country in top_countries %}
+            <li>{{ country.country }}: {{ country.count }} reservations</li>
         {% endfor %}
     </ul>
+
+    <h2>World Map of Visitor Locations</h2>
+    <div id="worldMap" style="height: 400px;"></div>
+
+    <!-- Other sections for future functionalities (like charts) -->
+
 </body>
 </html>
