Added search input for searching countries

--- a/hotel_system/hotel_stats/templates/dashboard.html
+++ b/hotel_system/hotel_stats/templates/dashboard.html
@@ -48,6 +48,7 @@
 
             <div class="stats-card" id="topCountries">
                 <h3>Top Countries</h3>
+                <input type="text" id="countrySearch" placeholder="Search for a country..." />
                 <ul>
                     <li class="placeholder">List of top 10 countries from all visitors</li>
                 </ul>
