Setting up manage reservations page

--- a/hotel_system/hotel_stats/templates/dashboard.html
+++ b/hotel_system/hotel_stats/templates/dashboard.html
@@ -54,6 +54,11 @@
                 </ul>
             </div>
         </div>
+        
+        <div class="manage-link-container">
+            <a href="/manage-reservations" class="manage-link">Manage Reservations</a>
+        </div>
+        
     </div>
 
     <!-- Add JS File -->
