--- a/hotel_system/hotel_stats/static/css/styles.css
+++ b/hotel_system/hotel_stats/static/css/styles.css
@@ -100,3 +100,29 @@ h2 {
    text-align: center;
    font-weight: 600;
 }
+
+.manage-link-container {
+   text-align: center;
+   margin-top: 30px;
+}
+
+.manage-link {
+   display: inline-block;
+   padding: 10px 20px;
+   font-size: 1.1rem;
+   color: #fff;
+   background-color: #2c3e50;
+   border-radius: 5px;
+   text-decoration: none;
+   transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.manage-link:hover {
+   background-color: #34495e;
+   transform: translateY(-3px);
+}
+
+.manage-link:active {
+   transform: translateY(1px);
+}
+
