--- a/hotel_system/hotel_stats/templates/manage_reservations.html
+++ b/hotel_system/hotel_stats/templates/manage_reservations.html
@@ -62,7 +62,6 @@
             </form>
         </div>
         
-
         <!-- Modify Reservation Section -->
         <div class="stats-card" id="modifyReservation">
             <h3>Modify Reservation</h3>
@@ -71,11 +70,40 @@
                     <label for="modifyReservationID">Reservation ID</label>
                     <input type="text" id="modifyReservationID" name="reservation_id" required>
 
-                    <label for="modifyHotel">Hotel</label>
-                    <input type="text" id="modifyHotel" name="hotel" required>
+                    <label for="modifyName">Name</label>
+                    <input type="text" id="modifyName" name="name">
+
+                    <label for="modifyEmail">Email</label>
+                    <input type="email" id="modifyEmail" name="email">
+
+                    <label for="modifyHotelType">Hotel Type</label>
+                    <div class="radio-group">
+                        <label>
+                            <input type="radio" name="modifyHotelType" value="Resort" id="modifyResortHotel"> Resort Hotel
+                        </label>
+                        <label>
+                            <input type="radio" name="modifyHotelType" value="City" id="modifyCityHotel"> City Hotel
+                        </label>
+                    </div>
+
+                    <label for="modifyCountry">Country</label>
+                    <input type="text" id="modifyCountry" name="country">
 
                     <label for="modifyArrivalDate">Arrival Date</label>
-                    <input type="date" id="modifyArrivalDate" name="arrival_date" required>
+                    <input type="date" id="modifyArrivalDate" name="arrival_date">
+
+                    <label for="modifyMeal">Meal Type</label>
+                    <div class="radio-group">
+                        <label>
+                            <input type="radio" name="modifyMeal" value="BB" id="modifyBBMeal"> BB (Bed & Breakfast)
+                        </label>
+                        <label>
+                            <input type="radio" name="modifyMeal" value="HB" id="modifyHBMeal"> HB (Half Board)
+                        </label>
+                        <label>
+                            <input type="radio" name="modifyMeal" value="Other" id="modifyOtherMeal"> Other
+                        </label>
+                    </div>
 
                     <button type="submit" class="manage-link">Modify Reservation</button>
                 </div>
