Updated js script for manage reservations

--- a/hotel_system/hotel_stats/templates/manage_reservations.html
+++ b/hotel_system/hotel_stats/templates/manage_reservations.html
@@ -129,5 +129,8 @@
         </div>
     </div>
 
+    <!-- Add JS File -->
+    <script src="{% static 'js/manage_reservations.js' %}"></script>
+
 </body>
 </html>
