--- a/hotel_system/hotel_stats/templates/manage_reservations.html
+++ b/hotel_system/hotel_stats/templates/manage_reservations.html
@@ -29,11 +29,21 @@
                     </div>
                     <!-- Country -->
                     <label for="country">Country</label>
-                    <input type="text" id="country" name="country" placeholder="Enter Country">
-        
+                    <select id="country" name="country">
+                        <!-- Country options will be populated by JavaScript -->
+                    </select>
+
                     <!-- Arrival Date -->
                     <label for="arrivalDate">Arrival Date</label>
                     <input type="date" id="arrivalDate" name="arrivalDate">
+
+                    <!-- Stays in Week Nights -->
+                    <label for="stays_in_week_nights">Stays in Week Nights</label>
+                    <input type="number" id="stays_in_week_nights" name="stays_in_week_nights" placeholder="Enter number of week nights">
+
+                    <!-- Stays in Weekend Nights -->
+                    <label for="stays_in_weekend_nights">Stays in Weekend Nights</label>
+                    <input type="number" id="stays_in_weekend_nights" name="stays_in_weekend_nights" placeholder="Enter number of weekend nights">
         
                     <!-- Meal Type (radio buttons) -->
                     <label for="meal">Meal Type</label>
@@ -43,6 +53,12 @@
                         </label>
                         <label>
                             <input type="radio" name="meal" value="HB" id="hbMeal"> HB (Half Board)
+                        </label>
+                        <label>
+                            <input type="radio" name="meal" value="SC" id="scMeal"> SC (self Catering)
+                        </label>
+                        <label>
+                            <input type="radio" name="meal" value="SC" id="scMeal"> FB (Full Board)
                         </label>
                         <label>
                             <input type="radio" name="meal" value="Other" id="otherMeal"> Other
@@ -65,28 +81,41 @@
                     <label for="modifyArrivalDate">Arrival Date</label>
                     <input type="date" id="modifyArrivalDate" name="arrival_date">
 
-                    <div class="boolean-choice-container">
-                        <h3>Is the reservation canceled?</h3>
-                        <div class="boolean-choice">
-                            <label for="reservation-canceled-yes">
-                                <input type="radio" id="reservation-canceled_yes" name="reservation_canceled" value="1"> Yes
-                            </label>
-                            <label for="reservation-canceled-no">
-                                <input type="radio" id="reservation-canceled_no" name="reservation_canceled" value="0"> No
-                            </label>
-                        </div>
+                    <!-- Stays in Week Nights -->
+                    <label for="modifyStaysInWeek">Stays in Week Nights</label>
+                    <input type="number" id="modifyStaysInWeek" name="modifyStaysInWeek" placeholder="Enter number of week nights">
+
+                    <!-- Stays in Weekend Nights -->
+                    <label for="modifyStaysInWeekend">Stays in Weekend Nights</label>
+                    <input type="number" id="modifyStaysInWeekend" name="modifyStaysInWeekend" placeholder="Enter number of weekend nights">
+        
+
+                    <label for="isCanceled">Is the reservation canceled?</label>
+                    <div class="radio-group">
+                        <label>
+                            <input type="radio" name="isCanceled" value="yes" id="yesCanceled"> Yes
+                        </label>
+                        <label>
+                            <input type="radio" name="isCanceled" value="no" id="noCanceled"> No
+                        </label>
                     </div>
 
                     <label for="modifyMeal">Meal Type</label>
                     <div class="radio-group">
                         <label>
-                            <input type="radio" name="modifyMeal" value="BB" id="modifyBBMeal"> BB (Bed & Breakfast)
+                            <input type="radio" name="meal" value="BB" id="bbMeal"> BB (Bed & Breakfast)
                         </label>
                         <label>
-                            <input type="radio" name="modifyMeal" value="HB" id="modifyHBMeal"> HB (Half Board)
+                            <input type="radio" name="meal" value="HB" id="hbMeal"> HB (Half Board)
                         </label>
                         <label>
-                            <input type="radio" name="modifyMeal" value="Other" id="modifyOtherMeal"> Other
+                            <input type="radio" name="meal" value="SC" id="scMeal"> SC (self Catering)
+                        </label>
+                        <label>
+                            <input type="radio" name="meal" value="SC" id="scMeal"> FB (Full Board)
+                        </label>
+                        <label>
+                            <input type="radio" name="meal" value="Other" id="otherMeal"> Other
                         </label>
                     </div>
 
