Display of countries

--- a/hotel_system/hotel_stats/templates/manage_reservations.html
+++ b/hotel_system/hotel_stats/templates/manage_reservations.html
@@ -27,10 +27,10 @@
                             <input type="radio" name="hotelType" value="City" id="cityHotel"> City Hotel
                         </label>
                     </div>
-                    <!-- Country -->
+
                     <label for="country">Country</label>
                     <select id="country" name="country">
-                        <!-- Country options will be populated by JavaScript -->
+                        <option value="" disabled selected>Select a Country</option>
                     </select>
 
                     <!-- Arrival Date -->
