--- a/hotel_system/hotel_stats/templates/manage_reservations.html
+++ b/hotel_system/hotel_stats/templates/manage_reservations.html
@@ -93,10 +93,10 @@
                     <label for="isCanceled">Is the reservation canceled?</label>
                     <div class="radio-group">
                         <label>
-                            <input type="radio" name="isCanceled" value="yes" id="yesCanceled"> Yes
+                            <input type="radio" name="isCanceled" value="1" id="yesCanceled"> Yes
                         </label>
                         <label>
-                            <input type="radio" name="isCanceled" value="no" id="noCanceled"> No
+                            <input type="radio" name="isCanceled" value="0" id="noCanceled"> No
                         </label>
                     </div>
 
@@ -112,7 +112,7 @@
                             <input type="radio" name="meal" value="SC" id="scMeal"> SC (self Catering)
                         </label>
                         <label>
-                            <input type="radio" name="meal" value="SC" id="scMeal"> FB (Full Board)
+                            <input type="radio" name="meal" value="FB" id="fbMeal"> FB (Full Board)
                         </label>
                         <label>
                             <input type="radio" name="meal" value="Other" id="otherMeal"> Other
