--- a/hotel_system/hotel_stats/templates/dashboard.html
+++ b/hotel_system/hotel_stats/templates/dashboard.html
@@ -18,7 +18,7 @@
         <div class="stats-section">
             <!-- MOst popular meal plans -->
             <div class="stats-card" id="mostPopularMeals">
-                <h3>Most Popular Meal Plans</h3>
+                <h3>Meal Plans</h3>
                 <canvas id="mealsChart"></canvas>
             </div>          
 
