--- a/hotel_system/hotel_stats/templates/manage_reservations.html
+++ b/hotel_system/hotel_stats/templates/manage_reservations.html
@@ -58,7 +58,7 @@
                             <input type="radio" name="meal" value="SC" id="scMeal"> SC (self Catering)
                         </label>
                         <label>
-                            <input type="radio" name="meal" value="SC" id="scMeal"> FB (Full Board)
+                            <input type="radio" name="meal" value="FB" id="scMeal"> FB (Full Board)
                         </label>
                         <label>
                             <input type="radio" name="meal" value="Other" id="otherMeal"> Other
