--- a/hotel_system/hotel_stats/templates/dashboard.html
+++ b/hotel_system/hotel_stats/templates/dashboard.html
@@ -55,6 +55,12 @@
                     <li class="placeholder">List of top 10 countries from all visitors</li>
                 </ul>
             </div>
+
+            <div class="stats-card" id="countryStats">
+                <h3>Country Details</h3>
+                <p>Select a country to view additional statistics.</p>
+            </div>
+
         </div>
         
         <div class="manage-link-container">
