--- a/hotel_system/hotel_stats/static/css/styles.css
+++ b/hotel_system/hotel_stats/static/css/styles.css
@@ -177,3 +177,19 @@ h2 {
    height: 20px;
    width: 20px;
 }
+
+#topCountries ul li {
+    cursor: pointer;
+    padding: 10px;
+    margin: 5px 0;
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    transition: background-color 0.2s, transform 0.2s;
+}
+
+#topCountries ul li:hover {
+    background-color: #e6f0ff;
+    transform: scale(1.02);
+}
+
