--- a/hotel_system/hotel_stats/templates/dashboard.html
+++ b/hotel_system/hotel_stats/templates/dashboard.html
@@ -60,7 +60,7 @@
                 <h3> High Cancellation Risk</h3>
                 <p class="main-number" id="high-risk-count"></p>
                 <p class="sub-text" id="high-risk-percentage"></p>
-                <ul id="high-risk-list"></ul>
+                <ul id="high-risk-list" class="scrollable-list"></ul>
             </div>
 
             <div class="stats-card" id="countryStats">
@@ -78,6 +78,13 @@
                     {% endfor %}
                 </select>
                 <canvas id="familyBookingsChart"></canvas>
+            </div>
+
+            <div class="stats-card" id="loyal-guests-card">
+                <h3>Loyal Guests This Month</h3>
+                <p id="loyal-guest-count">Number of loyal guests: <strong>...</strong></p>
+                <p id="loyal-guest-percent">Repeat guests: <strong>...</strong>% | New guests: <strong>...</strong>%</p>
+                <ul id="loyal-guest-list" class="scrollable-list"></ul>
             </div>
 
         </div>
