--- a/hotel_system/hotel_stats/templates/dashboard.html
+++ b/hotel_system/hotel_stats/templates/dashboard.html
@@ -100,6 +100,12 @@
                 <div id="vipStatsSummary"></div>
             </div>
 
+            <div class="stats-card" id="bookingTimingCard">
+                <h3>📅 Booking Planning Behavior</h3>
+                <canvas id="bookingTimingChart"></canvas>
+            </div>
+
+
         </div>
 
         <div class="manage-link-container">
