--- a/hotel_system/hotel_stats/templates/dashboard.html
+++ b/hotel_system/hotel_stats/templates/dashboard.html
@@ -101,7 +101,7 @@
             </div>
 
             <div class="stats-card" id="bookingTimingCard">
-                <h3>📅 Booking Planning Behavior</h3>
+                <h3>Booking Planning Behavior</h3>
                 <canvas id="bookingTimingChart"></canvas>
             </div>
 
